# DirectionalityIndicator

./: .gitignore  .travis-functions.sh  .travis.yml  README.md
src/: CMakeLists.txt  GfxTypes.h  MathTypes.h  Types.h
src/algorithms/: DataInject.cpp  DataInject.h  DirectionalityVisualization.cpp  DirectionalityVisualization.h  ExtractRegions.cpp  ExtractRegions.h  RenderLines.cpp  RenderTriangles.cpp  SurfaceLIC.cpp  SurfaceLIC.h
src/algorithms/shaders/: LICAdvect-fragment.glsl  LICAdvect-vertex.glsl  LICCompose-fragment.glsl  LICCompose-vertex.glsl  LICEdge-fragment.glsl  LICMeshTransform-fragment.glsl  LICMeshTransform-vertex.glsl  MeshRender-fragment.glsl  MeshRender-vertex.glsl  RenderLines-fragment.glsl  RenderTriangles-fragment.glsl
src/app/: App.cpp  App.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/app/icons/: iconLabelOrder.xpm  iconLabels.xpm  iconMesh.xpm
src/commands/: AddAlgorithm.cpp  AddAlgorithm.h  Connect.cpp  Connect.h  ReadFile.cpp  ReadFile.h
src/core/: Algorithm.cpp  Algorithm.h  AlgorithmData.cpp  AlgorithmData.h  AlgorithmDataBase.cpp  AlgorithmDataBase.h  AlgorithmDataCompatible.cpp  AlgorithmDataCompatible.h  BoundingBox.cpp  Command.cpp  Command.h  CommandObserver.cpp  CommandObserver.h  CommandQueue.cpp  CommandQueue.h  Connection.cpp  Connection.h  Connector.h  ConnectorBase.cpp  ConnectorBase.h  ConnectorObserver.h  ConnectorTransferable.h  Filesystem.cpp  Filesystem.h  Logger.h  Observer.cpp  Observer.h  ProcessingNetwork.cpp  ProcessingNetwork.h  Reader.h  StringUtils.h  Visitor.cpp  Visitor.h  Visualization.cpp  Visualization.h
src/core/data/: DataSet.cpp  DataSet.h  DataSetBase.cpp  DataSetBase.h  Lines.cpp  Lines.h  TriangleDataSet.cpp  TriangleDataSet.h  TriangleMesh.cpp  TriangleMesh.h
src/gfx/: Buffer.cpp  Buffer.h  Camera.cpp  GL.h  GLBindable.h  GLError.cpp  GLError.h  GLObject.h  Program.cpp  Program.h  Shader.h  Texture.h  View.cpp  View.h
src/gfx/shaders/: CameraEffectHorizon-fragment.glsl  CameraEffectHorizon-vertex.glsl
src/gui/: AlgorithmStrategies.h  Application.cpp  Application.h  CommandObserverQt.cpp  CommandObserverQt.h  DataWidget.cpp  DataWidget.h  FileWidget.cpp  FileWidget.h  MainWindow.cpp  MainWindow.h  OGLWidget.cpp  OGLWidget.h  ParameterWidget.cpp  ParameterWidget.h  ScaleLabel.cpp  ScaleLabel.h  main.cpp
src/gui/events/: CommandObserverEvent.cpp  CommandObserverEvent.h  Events.cpp  Events.h
src/io/: DPVReader.cpp  PlyReader.cpp  PlyReader.h
src/lib/: CMakeLists.txt  GfxTypes.h  MathTypes.h
src/lib/algorithms/: ExtractRegions.h  RenderLines.cpp  RenderLines.h  RenderTriangles.cpp  RenderTriangles.h  SurfaceLIC.cpp
src/lib/algorithms/shaders/: LICCompose-fragment.glsl  RenderLines-vertex.glsl  Shading.glsl
src/lib/commands/: AddAlgorithm.h  RunNetwork.cpp  RunNetwork.h
src/lib/core/: BoundingBox.h  Command.cpp  CommandQueue.h  Connector.h  Filesystem.h  Observer.cpp  Observer.h  ProcessingNetwork.cpp  ProcessingNetwork.h  Reader.h  StringUtils.h  Visualization.cpp  Visualization.h
src/lib/core/data/: LineDataSet.cpp  LineDataSet.h  Lines.h  TriangleDataSet.h  TriangleMesh.h
src/lib/di/: CMakeLists.txt  GfxTypes.h  MathTypes.h  Types.h
src/lib/di/algorithms/: DataInject.cpp  DataInject.h  Dilatate.cpp  Dilatate.h  ExtractRegions.cpp  ExtractRegions.h  GaussSmooth.cpp  GaussSmooth.h  RenderGraph.cpp  RenderGraph.h  RenderIllustrativeLines.cpp  RenderIllustrativeLines.h  RenderLines.cpp  RenderLines.h  RenderPoints.cpp  RenderPoints.h  RenderRegionMeshAndArrows.cpp  RenderRegionMeshAndArrows.h  RenderTriangles.cpp  RenderTriangles.h  SurfaceLIC.cpp  SurfaceLIC.h  Voxelize.cpp  Voxelize.h
src/lib/di/commands/: AddAlgorithm.h  Callback.cpp  Callback.h  Connect.cpp  Connect.h  QueryState.cpp  QueryState.h  ReadFile.cpp  ReadFile.h  RunNetwork.h
src/lib/di/core/: Algorithm.cpp  Algorithm.h  BoundingBox.cpp  BoundingBox.h  Command.cpp  Command.h  CommandObserver.h  CommandQueue.cpp  CommandQueue.h  Connection.h  Connector.cpp  Connector.h  ConnectorBase.h  ConnectorObserver.cpp  ConnectorObserver.h  ConnectorTransferable.cpp  ConnectorTransferable.h  Conversion.cpp  Conversion.h  Filesystem.cpp  Filesystem.h  Logger.h  Observable.cpp  Observable.h  Observer.h  ObserverCallback.cpp  ObserverCallback.h  ObserverParameter.cpp  ObserverParameter.h  Parameter.cpp  Parameter.h  ParameterBase.cpp  ParameterBase.h  ParameterTypes.h  ProcessingNetwork.cpp  ProcessingNetwork.h  Reader.cpp  Reader.h  State.cpp  State.h  (+4 more)
src/lib/di/gfx/: Buffer.cpp  Buffer.h  Camera.h  GL.h  GLBindable.h  GLError.cpp  GLError.h  GLObject.h  OffscreenView.cpp  OffscreenView.h  OpenGL.h  PixelData.cpp  PixelData.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  View.cpp  View.h  ViewEvent.cpp  ViewEvent.h  ViewEventListener.cpp  ViewEventListener.h
src/lib/di/gui/: AlgorithmStrategies.cpp  AlgorithmStrategies.h  AlgorithmStrategy.cpp  AlgorithmStrategy.h  AlgorithmWidget.cpp  AlgorithmWidget.h  Application.cpp  Application.h  ColorPicker.cpp  ColorPicker.h  CommandObserverQt.cpp  CommandObserverQt.h  DataWidget.cpp  DataWidget.h  FileWidget.cpp  FileWidget.h  MainWindow.cpp  MainWindow.h  OGLWidget.cpp  OGLWidget.h  ObserverQt.cpp  ObserverQt.h  ParameterBoolWidget.cpp  ParameterBoolWidget.h  ParameterColorWidget.cpp  ParameterColorWidget.h  ParameterDoubleWidget.cpp  ParameterDoubleWidget.h  ParameterIntListWidget.cpp  ParameterIntListWidget.h  ParameterIntWidget.cpp  ParameterIntWidget.h  ParameterUIntWidget.cpp  ParameterUIntWidget.h  ParameterWidget.cpp  ParameterWidget.h  ScaleLabel.h  ScreenShotWidget.cpp  ScreenShotWidget.h  ViewWidget.cpp  (+1 more)
src/lib/gfx/: Buffer.h  Camera.h  GL.h  GLError.h  Shader.cpp  Texture.cpp
src/lib/gui/: AlgorithmStrategies.cpp  AlgorithmStrategy.cpp  AlgorithmStrategy.h  AlgorithmWidget.cpp  AlgorithmWidget.h  Application.cpp  Application.h  CommandObserverQt.cpp  CommandObserverQt.h  DataWidget.cpp  DataWidget.h  FileWidget.cpp  MainWindow.cpp  MainWindow.h  OGLWidget.cpp  OGLWidget.h
src/lib/io/: DPVReader.h  PlyReader.cpp
(+76 files in other folders)
